--- a/CTPH_CoreServiceAgent/CTPH_CoreServiceAgent.csproj
+++ b/CTPH_CoreServiceAgent/CTPH_CoreServiceAgent.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <Version>1.0.1</Version>
+    <RepositoryUrl></RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
